--- a/src/components/profile/materialRow/MaterialRow.module.css
+++ b/src/components/profile/materialRow/MaterialRow.module.css
@@ -195,6 +195,7 @@
 
 .debtLibrary {
   grid-column: 2;
+  overflow-wrap: anywhere;
 }
 .debtMaterial {
   grid-column: 3;
@@ -202,7 +203,7 @@
 
 .debtRow {
   grid-auto-flow: column;
-  grid-template-columns: 1.5fr 3fr 4fr 1fr;
+  grid-template-columns: 1.5fr 2.1fr 4fr 1fr;
   border-bottom: unset;
 }
 
